--- a/static/index.html.hbs
+++ b/static/index.html.hbs
@@ -1,10 +1,15 @@
-Flipper Zero Firmware Builds
+<h1>Flipper Zero Firmware Builds</h1>
 
 This repository contains daily firmware builds for Flipper Zero.
 
-<a
+<h2><a target="_blank"
   href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{OfficialFilename}}&channel=release&version={{OfficialVersion}}">Official</a>
-<a
-  href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{UnleashedFilename}}&channel=cfw&version={{UnleashedVersion}}">Unleashed</a>
-<a
-  href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{RogueMasterFilename}}&channel=cfw&version={{RogueMasterVersion}}">RogueMaster</a>
+</h2>
+
+<h2><a target="_blank"
+    href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{UnleashedFilename}}&channel=Unleashed-cfw&version={{UnleashedVersion}}">Unleashed</a>
+</h2>
+
+<h2><a target="_blank"
+    href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{RogueMasterFilename}}&channel=RogueMaster-cfw&version={{RogueMasterVersion}}">RogueMaster</a>
+</h2>
