Update channel for ofw to dev

--- a/static/index.html.hbs
+++ b/static/index.html.hbs
@@ -3,7 +3,7 @@
 This repository contains daily firmware builds for Flipper Zero.
 
 <h2><a target="_blank"
-  href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{OfficialFilename}}&channel=release&version={{OfficialVersion}}">Official</a>
+  href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{OfficialFilename}}&channel=dev&version={{OfficialVersion}}">Official</a>
 </h2>
 
 <h2><a target="_blank"
