--- a/static/index.html.hbs
+++ b/static/index.html.hbs
@@ -1,15 +1,27 @@
-<h1>Flipper Zero Firmware Builds</h1>
+<html>
 
-This repository contains daily firmware builds for Flipper Zero.
+<head>
+  <title>Flipper Zero Firmware Builds</title>
+</head>
 
-<h2><a target="_blank"
-  href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{OfficialFilename}}&channel=dev&version={{OfficialVersion}}">Official</a>
-</h2>
+<body>
+    <h1>Flipper Zero Firmware Builds</h1>
 
-<h2><a target="_blank"
-    href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{UnleashedFilename}}&channel=Unleashed-cfw&version={{UnleashedVersion}}">Unleashed</a>
-</h2>
+    <p>This repository contains daily firmware builds for Flipper Zero.</p>
 
-<h2><a target="_blank"
-    href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{RogueMasterFilename}}&channel=RogueMaster-cfw&version={{RogueMasterVersion}}">RogueMaster</a>
-</h2>
+    <h2><a target="_blank"
+        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{OfficialFilename}}&channel=dev&version={{OfficialVersion}}">Official</a>
+    </h2>
+
+    <h2><a target="_blank"
+        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{UnleashedFilename}}&channel=Unleashed-cfw&version={{UnleashedVersion}}">Unleashed</a>
+    </h2>
+
+    <h2><a target="_blank"
+        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{RogueMasterFilename}}&channel=RogueMaster-cfw&version={{RogueMasterVersion}}">RogueMaster</a>
+    </h2>
+
+  </body>
+  
+  </html>
+  
