Add build timestamp and versions to index

--- a/static/index.html.hbs
+++ b/static/index.html.hbs
@@ -9,19 +9,20 @@
 
     <p>This repository contains daily firmware builds for Flipper Zero.</p>
 
+    <p>Last build time: {{Timestamp}}</p>
+
     <h2><a target="_blank"
-        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{OfficialFilename}}&channel=dev&version={{OfficialVersion}}">Official</a>
+        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{OfficialFilename}}&channel=dev&version={{OfficialVersion}}">Official</a> - {{OfficialVersion}}
     </h2>
 
     <h2><a target="_blank"
-        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{UnleashedFilename}}&channel=Unleashed-cfw&version={{UnleashedVersion}}">Unleashed</a>
+        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{UnleashedFilename}}&channel=Unleashed-cfw&version={{UnleashedVersion}}">Unleashed</a> - {{UnleashedVersion}}
     </h2>
 
     <h2><a target="_blank"
-        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{RogueMasterFilename}}&channel=RogueMaster-cfw&version={{RogueMasterVersion}}">RogueMaster</a>
+        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{RogueMasterFilename}}&channel=RogueMaster-cfw&version={{RogueMasterVersion}}">RogueMaster</a> - {{RogueMasterVersion}}
     </h2>
 
   </body>
-  
+
   </html>
-  
