--- a/static/index.html.hbs
+++ b/static/index.html.hbs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Flipper Zero Firmware Builds</title>
+    <title>Flipper Zero Firmware Builds</title>
 </head>
 
 <body>
@@ -12,17 +12,23 @@
     <p>Last build time: {{Timestamp}}</p>
 
     <h2><a target="_blank"
-        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{OfficialFilename}}&channel=dev&version={{OfficialVersion}}">Official</a> - {{OfficialVersion}}
+            href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{OfficialFilename}}&channel=dev&version={{OfficialVersion}}">Official</a>
+        - {{OfficialVersion}}
+        - <a href="https://github.com/flipperdevices/flipperzero-firmware">Repo</a>
     </h2>
 
     <h2><a target="_blank"
-        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{UnleashedFilename}}&channel=Unleashed-cfw&version={{UnleashedVersion}}">Unleashed</a> - {{UnleashedVersion}}
+            href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{UnleashedFilename}}&channel=Unleashed-cfw&version={{UnleashedVersion}}">Unleashed</a>
+        - {{UnleashedVersion}}
+        - <a href="https://github.com/DarkFlippers/unleashed-firmware">Repo</a>
     </h2>
 
     <h2><a target="_blank"
-        href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{RogueMasterFilename}}&channel=RogueMaster-cfw&version={{RogueMasterVersion}}">RogueMaster</a> - {{RogueMasterVersion}}
+            href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{RogueMasterFilename}}&channel=RogueMaster-cfw&version={{RogueMasterVersion}}">RogueMaster</a>
+        - {{RogueMasterVersion}}
+        - <a href="https://github.com/RogueMaster/flipperzero-firmware-wPlugins">Repo</a>
     </h2>
 
-  </body>
+</body>
 
-  </html>
+</html>
