Remove cfw from channel

--- a/static/index.html.hbs
+++ b/static/index.html.hbs
@@ -18,13 +18,13 @@
     </h2>
 
     <h2><a target="_blank"
-            href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{UnleashedFilename}}&channel=Unleashed-cfw&version={{UnleashedVersion}}">Unleashed</a>
+            href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{UnleashedFilename}}&channel=Unleashed&version={{UnleashedVersion}}">Unleashed</a>
         - {{UnleashedVersion}}
         - <a href="https://github.com/DarkFlippers/unleashed-firmware">Repo</a>
     </h2>
 
     <h2><a target="_blank"
-            href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{RogueMasterFilename}}&channel=RogueMaster-cfw&version={{RogueMasterVersion}}">RogueMaster</a>
+            href="https://lab.flipper.net/?url=https://jesserockz.github.io/flipperzero-firmware-builds/{{RogueMasterFilename}}&channel=RogueMaster&version={{RogueMasterVersion}}">RogueMaster</a>
         - {{RogueMasterVersion}}
         - <a href="https://github.com/RogueMaster/flipperzero-firmware-wPlugins">Repo</a>
     </h2>
